@@ -1,6 +1,7 @@
 Next Release
 ============
 
+* ENH: New algorithm: mesh.WarpPoints applies displacements fields to point sets.
 * ENH: FUGUE interface has been refactored to use the name_template system, 3 examples 
        added to doctests, some bugs solved.
 * ENH: Added new interfaces (fsl.utils.WarpUtils, ConvertWarp) to fnirtfileutils and convertwarp
